--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,81 @@
 // Начните писать стили здесь
+@use "global/fonts.scss";
+@use "global/variables.scss" as var;
+@use "global/mixins.scss";
+
+@use "helpers/visually-hidden.scss";
+
+@use "blocks/logo.scss";
+@use "blocks/main-nav-toggle.scss";
+@use "blocks/site-menu.scss";
+
+@use "blocks/promo.scss";
+@use "blocks/promo-images-wrapper.scss";
+@use "blocks/advantages.scss";
+@use "blocks/advantages-list.scss";
+@use "blocks/adventage-sublist.scss";
+@use "blocks/advantage-sublist-item.scss";
+@use "blocks/trip-date.scss";
+@use "blocks/button.scss";
+@use "blocks/map.scss";
+
+@use "blocks/page-footer.scss";
+@use "blocks/socials-list.scss";
+
+@use "blocks/reviews.scss";
+@use "blocks/reviews-form.scss";
+@use "blocks/reviews-form-group.scss";
+@use "blocks/input-text-box.scss";
+@use "blocks/input-text.scss";
+@use "blocks/radio-input-box.scss";
+@use "blocks/checkbox-box.scss";
+@use "blocks/textarea.scss";
+
+@use "blocks/modal-container.scss";
+@use "blocks/modal-failure";
+@use "blocks/modal-success";
+
+@use "blocks/gallery.scss";
+@use "blocks/photos-list.scss";
+@use "blocks/photo.scss";
+@use "blocks/likes.scss";
+@use "blocks/video-subsection.scss";
+@use "blocks/video.scss";
+
+.page {
+    height: 100%;
+}
+
+.page__body {
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    margin: 0 auto;
+    min-width: 320px;
+    min-height: 100%;
+
+    font-family: var.$main-font;
+    font-size: var.$font-m;
+    line-height: var.$line-height-s;
+    font-weight: var.$normal;
+    font-style: var.$normal;
+    word-break: break-word;
+    color: var.$color-main-text;
+
+    background-color: var.$color-main-bg;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+img {
+    display: block;
+    /*width: 100%;*/
+    height: auto;
+}
+
+a {
+    text-decoration: none;
+}
