Corrects errors indicated by mentor

--- a/source/sass/blocks/advantage-sublist-item.scss
+++ b/source/sass/blocks/advantage-sublist-item.scss
@@ -1,4 +1,3 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
 @use "../global/mixins.scss" as mixin;
 
@@ -7,7 +6,7 @@
 }
 
 .advantage-sublist-item__title {
-  margin-bottom: 16px;
+  margin: 0 0 16px 0;
 
   @include mixin.title-font-s;
 }
