--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -3,11 +3,11 @@
 @use "../global/mixins.scss" as mixin;
 
 .promo {
-  padding-bottom: 35px;
+  padding: 0 0 35px;
 }
 
 .promo__images-wrapper {
-  margin-bottom: 32px;
+  margin: 0 0 32px;
 }
 
 .promo__slogan {
