--- a/source/sass/blocks/advantages-list.scss
+++ b/source/sass/blocks/advantages-list.scss
@@ -1,12 +1,8 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
 @use "../global/mixins.scss" as mixin;
 
 .advantages-list {
-  display: grid;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+  @include mixin.list-reset;
 
   background-color: #eeeeee;
 
@@ -16,7 +12,7 @@
 .advantages-list__item {
   display: flex;
   flex-direction: column;
-  padding-top: 24px;
+  padding: 24px 0 0;
 
   counter-increment: advantages-counter;
 }
@@ -33,29 +29,26 @@
 }
 
 .advantages-list__item--accented .advantages-list__text-content {
-  padding-top: 33px;
-  padding-bottom: 40px;
+  padding: 33px 0 40px;
 }
 
 .advantages-list__item:not(.advantages-list-item--large)::after {
   content: "";
 
-  margin-top: 24px;
-  margin-right: 18px;
-  margin-left: 18px;
+  margin: 24px 18px 0;
   width: calc(100% - (18px * 2));
   height: 1px;
-  background-color: #d6d6d6;
+  background-color: var.$color-advantage-border;
 }
 
 .advantages-list__item:last-child::after {
-  margin-top: 27px;
+  margin: 27px 18px 0;
 
   background-color: transparent;
 }
 
 .advantages-list .advantages-list__item--large::after {
-  margin-top: 0;
+  margin: 0 18px;
   height: 0;
 }
 
@@ -65,7 +58,7 @@
 
   @include mixin.title-font-s;
 
-  margin-bottom: 11px;
+  margin: 0 0 11px 0;
 }
 
 .advantages-list__item--large .advantages-list__title {
@@ -75,7 +68,7 @@
 .advantages-list__title::after {
   content: "\2014 №" counter(advantages-counter) " \2014";
 
-  margin-bottom: 17px;
+  margin: 0 0 17px 0;
 
   font-family: var.$main-font;
   font-size: var.$font-s;
