--- a/source/sass/blocks/checkbox-box.scss
+++ b/source/sass/blocks/checkbox-box.scss
@@ -1,9 +1,8 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
 @use "../global/mixins.scss" as mixin;
 
 .checkbox-box:not(:last-child) {
-  padding-bottom: 16px;
+  padding: 0 20px 16px;
 }
 
 .checkbox-box__label {
@@ -19,11 +18,11 @@
   content: "";
 
   flex-shrink: 0;
-  margin-right: 16px;
+  margin: 0 16px 0 0;
   width: 46px;
   height: 46px;
 
-  background-color: #f2f2f2;
+  background-color: var.$color-input-bg;
   border-radius: 4px;
 }
 
