--- a/source/sass/blocks/input-text-box.scss
+++ b/source/sass/blocks/input-text-box.scss
@@ -11,7 +11,7 @@
   width: 58px;
   height: 58px;
 
-  background-color: #e6e6e6;
+  background-color: var.$color-contacts-icons;
 }
 
 .input-text-box--phone::after {
