--- a/source/sass/blocks/input-text.scss
+++ b/source/sass/blocks/input-text.scss
@@ -1,17 +1,15 @@
 @use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
+@use "../global/mixins.scss" as mixin;
 
 .input-text {
   padding: 16px 64px 16px 16px;
   width: 100%;
 
-  font-family: var.$main-font;
-  font-size: var.$font-m;
-  line-height: var.$line-height-l;
-  font-weight: var.$bold;
-  color: rgba(0, 0, 0, 0.3);
+  @include mixin.input-text;
+  color: var.$color-accented-text;
 
-  background-color: #f2f2f2;
+  background-color: var.$color-input-bg;
   border: none;
 }
 
@@ -20,9 +18,5 @@
 }
 
 .input-text::placeholder {
-  font-family: var.$main-font;
-  font-size: var.$font-m;
-  line-height: var.$line-height-l;
-  font-weight: var.$bold;
-  color: rgba(0, 0, 0, 0.3);
+  @include mixin.input-text;
 }
