--- a/source/sass/blocks/likes.scss
+++ b/source/sass/blocks/likes.scss
@@ -5,11 +5,11 @@
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
-  margin-top: 11px;
+  margin: 11px 0 0;
 }
 
 .likes__button {
-  margin-right: 14px;
+  margin: 0 14px 0 0;
   padding: 0;
 
   background-color: transparent;
