--- a/source/sass/blocks/photo.scss
+++ b/source/sass/blocks/photo.scss
@@ -1,8 +1,8 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
+@use "../global/mixins.scss" as mixin;
 
 .photo {
-  padding-top: 24px;
+  padding: 24px 0 0;
 
   border-top: 1px solid var.$color-disabled;
 }
@@ -13,17 +13,13 @@
 
 .photo__link {
   display: block;
-  margin-bottom: 15px;
+  margin: 0 0 15px;
 }
 
 .photo__title {
   margin: 0;
 
-  font-family: var.$main-font;
-  font-size: var.$font-s;
-  line-height: var.$line-height-s;
-  text-transform: uppercase;
-  color: var.$color-accented-text;
+  @include mixin.font-s;
 }
 
 .photo__author {
