--- a/source/sass/blocks/photos-list.scss
+++ b/source/sass/blocks/photos-list.scss
@@ -1,10 +1,8 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
+@use "../global/mixins.scss" as mixin;
 
 .photos-list {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+  @include mixin.list-reset;
 
   border-bottom: 1px solid var.$color-disabled;
 }
