--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -1,4 +1,5 @@
-@use "global/variables.scss" as var;
+@use "../global/variables.scss" as var;
+@use "../global/mixins.scss" as mixin;
 
 .site-menu {
   position: relative;
@@ -6,9 +7,8 @@
   display: flex;
   flex-direction: column;
   row-gap: 1px;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
+
+  @include mixin.list-reset;
 }
 
 .site-menu::after {
