--- a/source/sass/blocks/textarea.scss
+++ b/source/sass/blocks/textarea.scss
@@ -1,21 +1,18 @@
 @use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
+@use "../global/mixins.scss" as mixin;
 
 .textarea {
   padding: 16px;
   width: 100%;
   height: 150px;
 
-  background-color: #f2f2f2;
+  background-color: var.$color-input-bg;
   border: none;
 
   resize: none;
 }
 
 .textarea::placeholder {
-  font-family: var.$main-font;
-  font-size: var.$font-m;
-  line-height: var.$line-height-l;
-  font-weight: var.$bold;
-  color: rgba(0, 0, 0, 0.3);
+  @include mixin.input-text;
 }
