--- a/source/sass/blocks/video-subsection.scss
+++ b/source/sass/blocks/video-subsection.scss
@@ -1,4 +1,3 @@
-@use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
 @use "../global/mixins.scss" as mixin;
 
@@ -9,11 +8,11 @@
 .video-subsection__title {
   @include mixin.title-font-s;
 
-  margin-bottom: 30px;
+  margin: 0 0 30px;
 }
 
 .video-subsection__lead {
   @include mixin.text-font;
 
-  margin-bottom: 38px;
+  margin: 0 0 38px;
 }
