--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -18,5 +18,8 @@ $color-main: #81b3d2;
 $color-main-hover: #669ec0;
 $color-main-down: #5496bd;
 $color-disabled: #e5e5e5;
+$color-advantage-border: #d6d6d6;
+$color-input-bg: #f2f2f2;
+$color-contacts-icons: #e6e6e6;
 $color-main-text: #333333;
 $color-accented-text: #000000;
