--- a/source/sass/blocks/gallery.scss
+++ b/source/sass/blocks/gallery.scss
@@ -3,16 +3,38 @@
 
 .gallery {
   padding: 37px 0 0;
+
+  @media (min-width: var.$tablet-width) {
+    padding: 66px 0 0;
+  }
+
+  @media (min-width: var.$device-width) {
+    padding: 100px 0 0;
+  }
 }
 
 .gallery__title {
   @include mixin.title-font-s;
 
-  margin-bottom: 30px;
+  margin: 0 0 30px;
+
+  @media (min-width: var.$tablet-width) {
+    @include mixin.title-font-l;
+
+    margin: 0 0 30px;
+  }
 }
 
 .gallery__lead {
   @include mixin.text-font;
 
-  margin: 0 0 25px 0;
+  margin: 0 0 25px;
+
+  @media (min-width: var.$tablet-width) {
+    margin: 0 0 42px;
+  }
+
+  @media (min-width: var.$device-width) {
+    margin: 0 0 40px;
+  }
 }
