--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -13,6 +13,7 @@ $line-height-l: 26px;
 $normal: 400;
 $bold: 700;
 
+$color-body-bg: #e7e5e5;
 $color-main-bg: #ffffff;
 $color-main: #81b3d2;
 $color-main-hover: #669ec0;
@@ -20,6 +21,11 @@ $color-main-down: #5496bd;
 $color-disabled: #e5e5e5;
 $color-advantage-border: #d6d6d6;
 $color-input-bg: #f2f2f2;
+$color-inputs-group-separator: #dbdbdb;
 $color-contacts-icons: #e6e6e6;
+$color-active-link: #766357;
 $color-main-text: #333333;
 $color-accented-text: #000000;
+
+$tablet-width: 768px;
+$device-width: 1200px;
