--- a/source/sass/blocks/adventage-sublist.scss
+++ b/source/sass/blocks/adventage-sublist.scss
@@ -2,11 +2,18 @@
 @use "../global/mixins.scss" as mixin;
 
 .advantage-sublist {
-  display: grid;
+  grid-column: span 3;
+  display: flex;
+  flex-direction: column;
 
   @include mixin.list-reset;
 
   padding: 0 0 46px 0;
 
   background-color: var.$color-main-bg;
+
+  @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
