--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,6 +3,7 @@
 
 .page {
   height: 100%;
+  background-color: var.$color-body-bg;
 }
 
 .page__body {
@@ -10,6 +11,7 @@
   grid-template-rows: auto 1fr auto;
   margin: 0 auto;
   min-width: 320px;
+  max-width: 1200px;
   min-height: 100%;
 
   font-family: var.$main-font;
@@ -20,5 +22,6 @@
   word-break: break-word;
   color: var.$color-main-text;
 
+  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
   background-color: var.$color-main-bg;
 }
