--- a/source/sass/blocks/photos-list.scss
+++ b/source/sass/blocks/photos-list.scss
@@ -5,4 +5,8 @@
   @include mixin.list-reset;
 
   border-bottom: 1px solid var.$color-disabled;
+
+  @media (min-width: var.$tablet-width) {
+    border-bottom: 1px solid transparent;
+  }
 }
