--- a/source/sass/blocks/reviews-form-group.scss
+++ b/source/sass/blocks/reviews-form-group.scss
@@ -10,8 +10,72 @@
   border: none;
 }
 
+.reviews-form__groups-wrapper .reviews-form-group:first-child {
+  @media (min-width: var.$tablet-width) {
+    margin: 0 0 24px;
+    padding-right: 43px;
+
+    border-right: 1px solid var.$color-inputs-group-separator;
+  }
+  
+  @media (min-width: var.$device-width) {
+    margin: 0 0 32px;
+    padding-right: 63px;
+  }
+}
+
+.reviews-form__groups-wrapper .reviews-form-group:last-child {
+  @media (min-width: var.$tablet-width) {
+    padding-left: 44px;
+  }
+
+  @media (min-width: var.$device-width) {
+    padding-left: 64px;
+  }
+}
+
 .reviews-form-group--icons {
   padding: 0 0 18px;
+}
+
+.reviews-form-group--impression {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 36px 24px;
+  }
+
+  @media (min-width: var.$device-width) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 53px 59px;
+  }
+}
+
+.reviews-form-group--attraction {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 84px 18px;
+  }
+
+  @media (min-width: var.$device-width) {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 45px 63px;
+  }
+}
+
+.reviews-form-group__box {
+  padding: 0;
+
+  text-align: center;
 }
 
 .reviews-form-group__title {
@@ -22,6 +86,22 @@
   @include mixin.title-font-s;
 
   margin: 0 0 20px;
+
+  @media (min-width: var.$tablet-width) {
+    margin: 0 0 28px;
+  }
+}
+
+.reviews-form-group--impression .reviews-form-group__title {
+  @media (min-width: var.$device-width) {
+    margin: 0 0 45px;
+  }
+}
+
+.reviews-form-group--attraction .reviews-form-group__title {
+  @media (min-width: var.$device-width) {
+    margin: 0 0 59px;
+  }
 }
 
 .reviews-form-group__title::before {
@@ -32,8 +112,8 @@
   height: 1px;
 
   background-color: var.$color-disabled;
-}
 
-.reviews-form-group__box {
-  padding: 0 20px;
+  @media (min-width: var.$tablet-width) {
+    background-color: transparent;
+  }
 }
