--- a/source/sass/blocks/reviews-form.scss
+++ b/source/sass/blocks/reviews-form.scss
@@ -1,10 +1,46 @@
 @use "../global/fonts.scss";
 @use "../global/variables.scss" as var;
 
+.reviews-form__groups-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .reviews-form__footer {
-  padding: 32px 20px 24px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 24px 20px 24px;
 
   text-align: center;
+
+  @media (min-width: var.$tablet-width) {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  @media (min-width: var.$device-width) {
+    padding: 16px 96px 64px;
+  }
+}
+
+.reviews-form__button {
+  width: 280px;
+
+  @media (min-width: var.$device-width) {
+    width: 280px;
+  }
+
+  @media (min-width: var.$device-width) {
+    width: 384px;
+  }
 }
 
 .reviews-form__footnote {
