--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -9,6 +9,10 @@
   @include mixin.title-font-l;
 
   margin: 0 0 24px;
+
+  @media (min-width: var.$tablet-width) {
+    font-size: var.$font-xl;
+  }
 }
 
 .reviews__lead {
