--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -9,6 +9,11 @@
   row-gap: 1px;
 
   @include mixin.list-reset;
+
+  @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
 
 .site-menu::after {
@@ -23,6 +28,10 @@
   width: 100%;
   height: 7px;
   background-image: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.2));
+
+  @media (min-width: var.$tablet-width) {
+    display: none;
+  }
 }
 
 .site-menu__link {
@@ -39,4 +48,25 @@
 
   background-color: var.$color-main;
   box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2);
+
+  @media (min-width: var.$tablet-width) {
+    padding: 18px 17px;
+
+    font-size: var.$font-s;
+    line-height: var.$line-height-s;
+    color: var.$color-accented-text;
+
+    background-color: var.$color-main-bg;
+    box-shadow: none;
+  }
+}
+
+.site-menu__link--current {
+  @media (min-width: var.$tablet-width) {
+    color: var.$color-active-link;
+  }
+}
+
+.site-menu__link--empty {
+  padding: 0;
 }
