--- a/source/sass/blocks/input-text-box.scss
+++ b/source/sass/blocks/input-text-box.scss
@@ -25,14 +25,14 @@
 }
 
 .input-text-box--phone::after {
-  background-image: url("../../img/phone.svg");
+  background-image: url("../img/phone.svg");
   background-repeat: no-repeat;
   background-size: 18px 18px;
   background-position: center center;
 }
 
 .input-text-box--email::after {
-  background-image: url("../../img/envelope.svg");
+  background-image: url("../img/envelope.svg");
   background-repeat: no-repeat;
   background-size: 16px 12px;
   background-position: center center;
