--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -4,6 +4,10 @@
 
 .promo {
   padding: 0 0 35px;
+
+  @media (max-width: var.$mobile-width-only) {
+    margin-top: 56px;
+  }
 }
 
 .promo__images-wrapper {
