--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -21,11 +21,14 @@ $color-main-down: #5496bd;
 $color-disabled: #e5e5e5;
 $color-advantage-border: #d6d6d6;
 $color-input-bg: #f2f2f2;
+$color-radio-checkbox-down: #d5d5d5;
 $color-inputs-group-separator: #dbdbdb;
 $color-contacts-icons: #e6e6e6;
 $color-active-link: #766357;
+$color-current-developer: #b3b3b3;
 $color-main-text: #333333;
 $color-accented-text: #000000;
 
+$mobile-width-only: 767px;
 $tablet-width: 768px;
 $device-width: 1200px;
