--- a/source/sass/blocks/main-nav-toggle.scss
+++ b/source/sass/blocks/main-nav-toggle.scss
@@ -1,37 +1,115 @@
 @use "../global/variables.scss" as var;
 
-.main-nav-toggle--open {
+.main-nav-toggle {
   position: absolute;
-  top: 17px;
-  right: 20px;
 
-  display: block;
+  display: none;
   padding: 0;
-  width: 23px;
-  height: 4px;
 
-  background-color: var.$color-main;
+  background-color: transparent;
   border: none;
+
+  cursor: pointer;
+
+  @media (max-width: var.$mobile-width-only) {
+    position: absolute;
+    top: 17px;
+    right: 20px;
+    z-index: 13;
+
+    display: block;
+    width: 24px;
+    height: 24px;
+  }
 }
 
-.main-nav-toggle--open::before {
-  content: "";
-
-  display: block;
-  width: 23px;
-  height: 4px;
-
-  background-color: var.$color-main;
-  transform: translateY(-9px);
+.main-nav-toggle:hover {
+  opacity: 0.6;
 }
 
-.main-nav-toggle--open::after {
+.main-nav-toggle:active {
+  opacity: 0.3;
+}
+
+.main-nav-toggle__burger-line {
+  @media (max-width: var.$mobile-width-only) {
+    position: absolute;
+    top: 10px;
+    right: 1px;
+
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    width: 23px;
+    height: 4px;
+
+    background-color: var.$color-main;
+    border: none;
+  }
+}
+
+.main-nav--open .main-nav-toggle__burger-line {
+  display: none;
+}
+
+.main-nav-toggle::before {
   content: "";
 
-  display: block;
-  width: 23px;
-  height: 4px;
+  @media (max-width: var.$mobile-width-only) {
+    display: block;
+    width: 23px;
+    height: 4px;
 
-  background-color: var.$color-main;
-  transform: translateY(5px);
+    background-color: var.$color-main;
+    transform: translateY(-7px);
+  }
+}
+
+.main-nav-toggle::after {
+  @media (max-width: var.$mobile-width-only) {
+    content: "";
+
+    display: block;
+    width: 23px;
+    height: 4px;
+
+    background-color: var.$color-main;
+    transform: translateY(7px);
+  }
+}
+
+.main-nav--open .main-nav-toggle::before {
+  content: "";
+
+  @media (max-width: var.$mobile-width-only) {
+    position: absolute;
+    top: 10px;
+    right: -2px;
+    z-index: 1;
+
+    display: block;
+    width: 28px;
+    height: 4px;
+
+    background-color: var.$color-main-bg;
+    transform: rotate(45deg);
+  }
+}
+
+.main-nav--open .main-nav-toggle::after {
+  content: "";
+
+  @media (max-width: var.$mobile-width-only) {
+    position: absolute;
+    top: 10px;
+    right: -2px;
+    z-index: 1;
+
+    display: block;
+    width: 28px;
+    height: 4px;
+
+    background-color: var.$color-main-bg;
+    transform: rotate(-45deg);
+  }
 }
