--- a/source/sass/blocks/photos-list.scss
+++ b/source/sass/blocks/photos-list.scss
@@ -2,11 +2,20 @@
 @use "../global/mixins.scss" as mixin;
 
 .photos-list {
+  display: flex;
+  flex-direction: column;
   @include mixin.list-reset;
 
   border-bottom: 1px solid var.$color-disabled;
 
   @media (min-width: var.$tablet-width) {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+
     border-bottom: 1px solid transparent;
+  }
+
+  @media (min-width: var.$tablet-width) {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
