--- a/source/sass/blocks/site-menu.scss
+++ b/source/sass/blocks/site-menu.scss
@@ -2,12 +2,7 @@
 @use "../global/mixins.scss" as mixin;
 
 .site-menu {
-  position: relative;
-
-  display: flex;
-  flex-direction: column;
-  row-gap: 1px;
-
+  display: none;
   @include mixin.list-reset;
 
   @media (min-width: var.$tablet-width) {
@@ -16,7 +11,18 @@
   }
 }
 
-.site-menu::after {
+.main-nav--open .site-menu {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 12;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.main-nav--open .site-menu::after {
   content: "";
 
   position: absolute;
@@ -36,7 +42,8 @@
 
 .site-menu__link {
   display: block;
-  padding: 17px 0 12px;
+  margin: 0 auto;
+  padding: 18px 0 12px;
 
   font-family: var.$main-font;
   font-size: var.$font-l;
@@ -47,10 +54,9 @@
   color: var.$color-main-bg;
 
   background-color: var.$color-main;
-  box-shadow: 0 1px 0 0 rgba(1, 1, 1, 0.2);
 
   @media (min-width: var.$tablet-width) {
-    padding: 18px 17px;
+    padding: 18px 15px;
 
     font-size: var.$font-s;
     line-height: var.$line-height-s;
@@ -61,9 +67,54 @@
   }
 }
 
+.site-menu__link:hover,
+.site-menu__link:focus {
+  color: rgba(255, 255, 255, 0.6);
+
+  background-color: var.$color-main-hover;
+  outline: none;
+
+  @media (min-width: var.$tablet-width) {
+    color: var.$color-main;
+
+    background-color: transparent;
+  }
+}
+
+.site-menu__link:active {
+  color: rgba(255, 255, 255, 0.3);
+
+  background-color: var.$color-main-down;
+
+  @media (min-width: var.$tablet-width) {
+    color: rgba(0, 0, 0, 0.3);
+
+    background-color: transparent;
+  }
+}
+
+.site-menu__item:not(:first-child) .site-menu__link {
+  @media (max-width: var.$mobile-width-only) {
+    box-shadow: inset 0 1px 0 0 rgba(1, 1, 1, 0.2),
+                inset 0 2px 0 0 rgba(255, 255, 255, 0.2);
+  }
+}
+
 .site-menu__link--current {
   @media (min-width: var.$tablet-width) {
     color: var.$color-active-link;
+  }
+}
+
+.site-menu__link--current:hover {
+  @media (min-width: var.$tablet-width) {
+    color: rgba(0, 0, 0, 0.6);
+  }
+}
+
+.site-menu__link--current:active {
+  @media (min-width: var.$tablet-width) {
+    color: rgba(0, 0, 0, 0.3);
   }
 }
 
