--- a/source/sass/blocks/textarea.scss
+++ b/source/sass/blocks/textarea.scss
@@ -8,6 +8,9 @@
   max-width: 768px;
   height: 150px;
 
+  font-family: var.$main-font;
+  @include mixin.input-text;
+
   background-color: var.$color-input-bg;
   border: none;
 
@@ -16,4 +19,8 @@
 
 .textarea::placeholder {
   @include mixin.input-text;
+}
+
+.textarea:focus {
+  color: var.$color-accented-text;
 }
