Adds decor without images

--- a/source/sass/blocks/reviews-form-group.scss
+++ b/source/sass/blocks/reviews-form-group.scss
@@ -149,7 +149,7 @@
   position: relative;
   z-index: 1;
 
-  margin: 0 auto;
+  margin: 0 auto 20px;
   width: 300px;
 
   background-color: var.$color-main-bg;
