--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -3,10 +3,15 @@
 }
 
 .map__image {
-  /*width: 100%;
-  height: auto;*/
+  width: 100%;
+  max-height: 350px;
 
   display: block;
 
   border: none;
+
+  background-image: url("../../img/map.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 350px;
+  background-position: center;
 }
